# models/login.go
@@ -1,7 +1,0 @@
-package models
-
-
-type Login struct{
-	Login string 
-	Password string 
-}
